Simulation for several European countries

--- a/new_simulation_poland.ipynb
+++ b/new_simulation_poland.ipynb
@@ -285,7 +285,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Time:  0:19:35 Elapsed Time: 0:19:35  (100%)   Country: Slovakia Running: Ploting result: Death factor                                                      \n"
+      "Time:  0:00:35 Elapsed Time: 0:00:35  (100%)   Country: Poland Running: Ploting result: Death factor                                                   \n"
      ]
     },
     {
@@ -324,31 +324,7 @@
     "df_ratio = {}\n",
     "for country_index, (country, regions) in enumerate(countries.items()):\n",
     "    if country not in [\n",
-    "         # 'Albania',\n",
-    "         'Austria',\n",
-    "         'Belgium',\n",
-    "         'Bulgaria',\n",
-    "         'Switzerland',\n",
-    "         # 'Czechia',\n",
-    "         'Germany',\n",
-    "         'Denmark',\n",
-    "         'Greece',\n",
-    "         'Spain',\n",
-    "         'Finland',\n",
-    "         'France',\n",
-    "         # 'Croatia',\n",
-    "         'Hungary',\n",
-    "         # 'Ireland',\n",
-    "         'Italy',\n",
-    "         'Latvia',\n",
-    "         # 'Netherlands',\n",
-    "         'Norway',\n",
-    "         'Portugal',\n",
-    "         # 'Romania',\n",
-    "         # 'Sweden', jakiś problem\n",
-    "         'Slovakia',\n",
-    "         # 'Turkey',\n",
-    "         # 'United Kingdom',\n",
+    "         'Poland',\n",
     "    ]:\n",
     "        continue\n",
     "    format_label.update_mapping(country=country)\n",
@@ -369,6 +345,7 @@
     "    format_label.update_mapping(running='Loading population' + ' ' * 30)\n",
     "    bar.update()\n",
     "    population = pd.read_csv(f'{data_dir_path}/{country}/old_population.csv')\n",
+    "    population = population[population['Sex'] == 'T']\n",
     "    population = population[~population['Age group'].isin(['UNK', 'Y_OPEN'])]\n",
     "    population['Age group'] = population['Age group'].replace({'TOTAL': 'YTOTAL', 'Y_LT1': 'Y0'}).apply(lambda x: x[1:])\n",
     "    population_yearly = population[~population['Age group'].isin(['TOTAL', '0'])]\n",
@@ -380,6 +357,33 @@
     "    population = population[~population['Age group'].isin(['85-89', '90-94', '95-99'])]\n",
     "    population['Age group'] = population['Age group'].fillna(f'85+')\n",
     "    \n",
+    "    population = population.append(population[population['Age group'].isin(['00-04', '05-09', '10-14', '15-19', '20-24'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    population = population[~population['Age group'].isin(['00-04', '05-09', '10-14', '15-19', '20-24'])]\n",
+    "    population['Age group'] = population['Age group'].fillna(f'00-24')\n",
+    "    \n",
+    "    population = population.append(population[population['Age group'].isin(['25-29', '30-34'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    population = population.fillna({'Age group': '25-34'})\n",
+    "    population = population[~population['Age group'].isin(['25-29', '30-34'])].reset_index(drop=True)\n",
+    "    \n",
+    "    population = population.append(population[population['Age group'].isin(['35-39', '40-44'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    population = population.fillna({'Age group': '35-44'})\n",
+    "    population = population[~population['Age group'].isin(['35-39', '40-44'])].reset_index(drop=True)\n",
+    "    \n",
+    "    population = population.append(population[population['Age group'].isin(['45-49', '50-54'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    population = population.fillna({'Age group': '45-54'})\n",
+    "    population = population[~population['Age group'].isin(['45-49', '50-54'])].reset_index(drop=True)\n",
+    "    \n",
+    "    population = population.append(population[population['Age group'].isin(['55-59', '60-64'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    population = population.fillna({'Age group': '55-64'})\n",
+    "    population = population[~population['Age group'].isin(['55-59', '60-64'])].reset_index(drop=True)\n",
+    "    \n",
+    "    population = population.append(population[population['Age group'].isin(['65-69', '70-74'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    population = population.fillna({'Age group': '65-74'})\n",
+    "    population = population[~population['Age group'].isin(['65-69', '70-74'])].reset_index(drop=True)\n",
+    "    \n",
+    "    population = population.append(population[population['Age group'].isin(['75-79', '80-84'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    population = population.fillna({'Age group': '75-84'})\n",
+    "    population = population[~population['Age group'].isin(['75-79', '80-84'])].reset_index(drop=True)\n",
     "    \n",
     "    if country == 'United Kingdom':\n",
     "        population = population[population['Year'] == 2019].reset_index(drop=True)\n",
@@ -387,7 +391,7 @@
     "        population = population[population['Year'] == 2020].reset_index(drop=True)\n",
     "    new_df = pd.DataFrame({'Age group': population['Age group'].unique()})\n",
     "    for i, region in enumerate([regions]):\n",
-    "        new_df.insert(i + 1, region, list(population[np.logical_and(population['Region'] == region, population['Sex'] == 'T')]['Value']), True)\n",
+    "        new_df.insert(i + 1, region, list(population[population['Region'] == region]['Value']), True)\n",
     "    new_df = new_df[~new_df['Age group'].isin(['UNK', 'Y_GE75', 'Y_GE80'])].sort_values('Age group').reset_index(drop=True)\n",
     "    population = new_df.copy()\n",
     "    \n",
@@ -437,14 +441,42 @@
     "    total_deaths = total_deaths.append(total_deaths[total_deaths['Age group'].isin(['85-89', '90+'])].groupby(['Year', 'Region']).sum().reset_index())\n",
     "    total_deaths = total_deaths.fillna({'Age group': '85+'})\n",
     "    total_deaths = total_deaths[~total_deaths['Age group'].isin(['85-89', '90+'])].reset_index(drop=True)\n",
-    "    total_deaths_5_years_age_group = total_deaths.copy()\n",
+    "\n",
+    "    total_deaths = total_deaths.append(total_deaths[total_deaths['Age group'].isin(['00-04', '05-09', '10-14', '15-19', '20-24'])].groupby(['Year', 'Region']).sum().reset_index())\n",
+    "    total_deaths = total_deaths[~total_deaths['Age group'].isin(['00-04', '05-09', '10-14', '15-19', '20-24'])]\n",
+    "    total_deaths['Age group'] = total_deaths['Age group'].fillna(f'00-24')\n",
+    "    \n",
+    "    total_deaths = total_deaths.append(total_deaths[total_deaths['Age group'].isin(['25-29', '30-34'])].groupby(['Year', 'Region']).sum().reset_index())\n",
+    "    total_deaths = total_deaths.fillna({'Age group': '25-34'})\n",
+    "    total_deaths = total_deaths[~total_deaths['Age group'].isin(['25-29', '30-34'])].reset_index(drop=True)\n",
+    "    \n",
+    "    total_deaths = total_deaths.append(total_deaths[total_deaths['Age group'].isin(['35-39', '40-44'])].groupby(['Year', 'Region']).sum().reset_index())\n",
+    "    total_deaths = total_deaths.fillna({'Age group': '35-44'})\n",
+    "    total_deaths = total_deaths[~total_deaths['Age group'].isin(['35-39', '40-44'])].reset_index(drop=True)\n",
+    "    \n",
+    "    total_deaths = total_deaths.append(total_deaths[total_deaths['Age group'].isin(['45-49', '50-54'])].groupby(['Year', 'Region']).sum().reset_index())\n",
+    "    total_deaths = total_deaths.fillna({'Age group': '45-54'})\n",
+    "    total_deaths = total_deaths[~total_deaths['Age group'].isin(['45-49', '50-54'])].reset_index(drop=True)\n",
+    "    \n",
+    "    total_deaths = total_deaths.append(total_deaths[total_deaths['Age group'].isin(['55-59', '60-64'])].groupby(['Year', 'Region']).sum().reset_index())\n",
+    "    total_deaths = total_deaths.fillna({'Age group': '55-64'})\n",
+    "    total_deaths = total_deaths[~total_deaths['Age group'].isin(['55-59', '60-64'])].reset_index(drop=True)\n",
+    "    \n",
+    "    total_deaths = total_deaths.append(total_deaths[total_deaths['Age group'].isin(['65-69', '70-74'])].groupby(['Year', 'Region']).sum().reset_index())\n",
+    "    total_deaths = total_deaths.fillna({'Age group': '65-74'})\n",
+    "    total_deaths = total_deaths[~total_deaths['Age group'].isin(['65-69', '70-74'])].reset_index(drop=True)\n",
+    "    \n",
+    "    total_deaths = total_deaths.append(total_deaths[total_deaths['Age group'].isin(['75-79', '80-84'])].groupby(['Year', 'Region']).sum().reset_index())\n",
+    "    total_deaths = total_deaths.fillna({'Age group': '75-84'})\n",
+    "    total_deaths = total_deaths[~total_deaths['Age group'].isin(['75-79', '80-84'])].reset_index(drop=True)\n",
+    "    \n",
     "    bar.update()\n",
     "    \n",
     "    # Load and prepare prior population\n",
     "    format_label.update_mapping(running='Loading prior population' + ' ' * 30)\n",
     "    bar.update()\n",
     "    old_population = pd.read_csv(f'{data_dir_path}/{country}/old_population.csv')\n",
-    "\n",
+    "    old_population = old_population[old_population['Sex'] == 'T']\n",
     "    old_population = old_population[~old_population['Age group'].isin(['UNK', 'Y_GE75', 'Y_GE80', 'Y_OPEN'])]\n",
     "\n",
     "    old_population['Age group'] = old_population['Age group'].replace({'TOTAL': 'YTOTAL', 'Y_LT1': 'Y0'}).apply(lambda x: x[1:])\n",
@@ -452,9 +484,37 @@
     "        old_population = old_population.append(old_population[old_population['Age group'].isin([str(i) for i in range(start, stop)])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
     "        old_population = old_population[~old_population['Age group'].isin([str(i) for i in range(start, stop)])]\n",
     "        old_population['Age group'] = old_population['Age group'].fillna(f'{start:02d}-{stop-1:02d}')\n",
-    "    old_population = old_population.append(old_population[old_population['Age group'].isin(['85-89', '90-94', '95-99'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    old_population = old_population.append(old_population[old_population['Age group'].isin(['80-84', '85-89', '90-94', '95-99'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
     "    old_population = old_population[~old_population['Age group'].isin(['85-89', '90-94', '95-99'])]\n",
     "    old_population['Age group'] = old_population['Age group'].fillna(f'85+')\n",
+    "    \n",
+    "    old_population = old_population.append(old_population[old_population['Age group'].isin(['00-04', '05-09', '10-14', '15-19', '20-24'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    old_population = old_population[~old_population['Age group'].isin(['00-04', '05-09', '10-14', '15-19', '20-24'])]\n",
+    "    old_population['Age group'] = old_population['Age group'].fillna(f'00-24')\n",
+    "    \n",
+    "    old_population = old_population.append(old_population[old_population['Age group'].isin(['25-29', '30-34'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    old_population = old_population.fillna({'Age group': '25-34'})\n",
+    "    old_population = old_population[~old_population['Age group'].isin(['25-29', '30-34'])].reset_index(drop=True)\n",
+    "    \n",
+    "    old_population = old_population.append(old_population[old_population['Age group'].isin(['35-39', '40-44'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    old_population = old_population.fillna({'Age group': '35-44'})\n",
+    "    old_population = old_population[~old_population['Age group'].isin(['35-39', '40-44'])].reset_index(drop=True)\n",
+    "    \n",
+    "    old_population = old_population.append(old_population[old_population['Age group'].isin(['45-49', '50-54'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    old_population = old_population.fillna({'Age group': '45-54'})\n",
+    "    old_population = old_population[~old_population['Age group'].isin(['45-49', '50-54'])].reset_index(drop=True)\n",
+    "    \n",
+    "    old_population = old_population.append(old_population[old_population['Age group'].isin(['55-59', '60-64'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    old_population = old_population.fillna({'Age group': '55-64'})\n",
+    "    old_population = old_population[~old_population['Age group'].isin(['55-59', '60-64'])].reset_index(drop=True)\n",
+    "    \n",
+    "    old_population = old_population.append(old_population[old_population['Age group'].isin(['65-69', '70-74'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    old_population = old_population.fillna({'Age group': '65-74'})\n",
+    "    old_population = old_population[~old_population['Age group'].isin(['65-69', '70-74'])].reset_index(drop=True)\n",
+    "    \n",
+    "    old_population = old_population.append(old_population[old_population['Age group'].isin(['75-79', '80-84'])].groupby(['Year', 'Region', 'Sex']).sum().reset_index())\n",
+    "    old_population = old_population.fillna({'Age group': '75-84'})\n",
+    "    old_population = old_population[~old_population['Age group'].isin(['75-79', '80-84'])].reset_index(drop=True)\n",
     "\n",
     "    old_population = old_population[np.logical_and(old_population['Year'] >= 2015, old_population['Year'] < 2020)].reset_index(drop=True)\n",
     "    prior_populations = dict()\n",
@@ -537,8 +597,7 @@
     "        plot_cumulative_deaths()\n",
     "        format_label.update_mapping(country=country, running='Ploting result: darkfigure' + ' ' * 30)\n",
     "        bar.update()\n",
-    "        if country == 'United Kingdom':\n",
-    "            weekly_regional_cases = weekly_regional_cases.iloc[:, :-8]\n",
+    "        \n",
     "        window_list = [1, 3, 5]\n",
     "        gamma_list = [0.0, 0.8, 1.0]\n",
     "\n",
@@ -559,22 +618,22 @@
     "            additional_deaths_not_attributed_to_covid = np.maximum(0, overall_minus_max - weekly_regional_deaths).fillna(0)\n",
     "            corrected_covid_deaths = additional_deaths_not_attributed_to_covid * gamma + weekly_regional_deaths\n",
     "\n",
-    "            additional_deaths_not_attributed_to_covid_window.loc[age_group, weekly_regional_deaths.columns].T.plot(ax=ax[0, 0], label=f'excess {gamma=:.2f}', style='b')\n",
-    "            additional_deaths_not_attributed_to_covid.loc[age_group, weekly_regional_deaths.columns].T.plot(ax=ax[0, 1], label=f'excess {gamma=:.2f}', style='b')\n",
+    "            additional_deaths_not_attributed_to_covid_window.loc[age_group, weekly_regional_cases.columns].T.plot(ax=ax[0, 0], label=f'excess {gamma=:.2f}', style='b')\n",
+    "            additional_deaths_not_attributed_to_covid.loc[age_group, weekly_regional_cases.columns].T.plot(ax=ax[0, 1], label=f'excess {gamma=:.2f}', style='b')\n",
     "\n",
     "\n",
     "            weekly_regional_deaths_window.loc[age_group].T.plot(ax=ax[1, 0], style='g', label='covid')\n",
-    "            corrected_covid_deaths_window.loc[age_group, weekly_regional_deaths.columns].T.plot(ax=ax[1, 0], label=f'covid + excess {gamma=:.2f}', style='b')\n",
+    "            corrected_covid_deaths_window.loc[age_group, weekly_regional_cases.columns].T.plot(ax=ax[1, 0], label=f'covid + excess {gamma=:.2f}', style='b')\n",
     "\n",
     "            weekly_regional_deaths.loc[age_group].T.plot(ax=ax[1, 1], style='g', label='covid')\n",
-    "            corrected_covid_deaths.loc[age_group, weekly_regional_deaths.columns].T.plot(ax=ax[1, 1], label=f'covid + excess {gamma=:.2f}', style='b')\n",
+    "            corrected_covid_deaths.loc[age_group, weekly_regional_cases.columns].T.plot(ax=ax[1, 1], label=f'covid + excess {gamma=:.2f}', style='b')\n",
     "\n",
     "            weekly_regional_deaths_window.cumsum(axis=1).loc[age_group].T.plot(ax=ax[2, 0], label=f'covid', style='g')\n",
-    "            corrected_covid_deaths_window.cumsum(axis=1).loc[age_group, weekly_regional_deaths.columns].T.plot(ax=ax[2, 0], label=f'covid + excess {gamma=:.2f}', style='b')\n",
-    "            corrected_covid_deaths.cumsum(axis=1).loc[age_group, weekly_regional_deaths.columns].T.plot(ax=ax[2, 0], label=f'covid + excess (without mean) {gamma=:.2f}', style='--r')\n",
+    "            corrected_covid_deaths_window.cumsum(axis=1).loc[age_group, weekly_regional_cases.columns].T.plot(ax=ax[2, 0], label=f'covid + excess {gamma=:.2f}', style='b')\n",
+    "            corrected_covid_deaths.cumsum(axis=1).loc[age_group, weekly_regional_cases.columns].T.plot(ax=ax[2, 0], label=f'covid + excess (without mean) {gamma=:.2f}', style='--r')\n",
     "\n",
     "            weekly_regional_deaths.cumsum(axis=1).loc[age_group].T.plot(ax=ax[2, 1], label='covid', style='g')\n",
-    "            corrected_covid_deaths.cumsum(axis=1).loc[age_group, weekly_regional_deaths.columns].T.plot(ax=ax[2, 1], label=f'covid + excess {gamma=:.2f}', style='b')\n",
+    "            corrected_covid_deaths.cumsum(axis=1).loc[age_group, weekly_regional_cases.columns].T.plot(ax=ax[2, 1], label=f'covid + excess {gamma=:.2f}', style='b')\n",
     "\n",
     "            ax[0, 1].legend()\n",
     "            ax[0, 0].legend()\n",
@@ -585,8 +644,8 @@
     "\n",
     "            ax[0, 0].set_ylim([0, round(np.max(np.max(overall_minus_max)), -2) * 1.1])\n",
     "            ax[0, 1].set_ylim([0, round(np.max(np.max(overall_minus_max)), -2) * 1.1])\n",
-    "            ax[1, 0].set_ylim([0, round(np.max(np.max(weekly_regional_deaths)), -2) * 1.1])\n",
-    "            ax[1, 1].set_ylim([0, round(np.max(np.max(weekly_regional_deaths)), -2) * 1.1])\n",
+    "            ax[1, 0].set_ylim([0, round(np.max(np.max(corrected_covid_deaths)), -2) * 1.1])\n",
+    "            ax[1, 1].set_ylim([0, round(np.max(np.max(corrected_covid_deaths)), -2) * 1.1])\n",
     "            ax[2, 0].set_ylim([0, round(np.max(np.max(corrected_covid_deaths.cumsum(axis=1))), -2) * 1.1])\n",
     "            ax[2, 1].set_ylim([0, round(np.max(np.max(corrected_covid_deaths.cumsum(axis=1))), -2) * 1.1])\n",
     "\n",
@@ -722,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f6f3c67-3230-4079-8786-13cf3ba18cf0",
+   "id": "4926d01c-65e0-493f-88cc-784e86365695",
    "metadata": {},
    "outputs": [],
    "source": []
