--- a/preapre_all_data-old.ipynb
+++ b/preapre_all_data-old.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "431c7535-a268-4290-b8f1-c7c5254554a7",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
    ],
    "source": [
     "# Download data file (population and deaths from Eurostat)\n",
-    "population_link = 'https://ec.europa.eu/eurostat/api/dissemination/sdmx/2.1/data/DEMO_PJAN/?format=SDMX-CSV&lang=en&label=both'\n",
+    "population_link = 'https://ec.europa.eu/eurostat/api/dissemination/sdmx/2.1/data/DEMO_R_PJANGROUP/?format=SDMX-CSV&lang=en&label=both'\n",
     "downloaded_data = requests.get(population_link)\n",
     "with open('data/Data/old_population.csv', 'wb') as file:\n",
     "    file.write(downloaded_data.content)\n",
@@ -85,13 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "28143e8d-7756-413b-9bc5-03e5b4c5d4b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "today = datetime.date.today().strftime(\"%d-%m-%Y\")\n",
-    "# today = '15-02-2022'\n",
     "data_dir_path = f'data/World/{today}'\n",
     "if not os.path.exists(f'{data_dir_path}'):\n",
     "    os.mkdir(f'{data_dir_path}')"
@@ -99,17 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5876773c-ed6b-41f2-8eea-469cad71bf71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jhd = pd.read_csv('https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_deaths_global.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d91a28c8-41f8-4396-8fa6-b916af0865a2",
    "metadata": {},
    "outputs": [
@@ -123,35 +112,33 @@
    ],
    "source": [
     "data = pd.read_csv('./data/Data/Output_5.csv', encoding='latin-1', skiprows=3)\n",
-    "countries = {\n",
-    "    'Albania': 'AL',\n",
-    "    'Austria': 'AT',\n",
-    "    'Belgium': 'BE',\n",
-    "    'Bulgaria': 'BG',\n",
-    "    'Croatia': 'HR',\n",
-    "    'Czechia': 'CZ',\n",
-    "    'Denmark': 'DK',\n",
-    "    'Estonia': 'EE',\n",
-    "    'Finland': 'FI',\n",
-    "    'France': 'FR',\n",
-    "    'Germany': 'DE',\n",
-    "    'Greece': 'EL',\n",
-    "    'Hungary': 'HU',\n",
-    "    'Ireland': 'IE',\n",
-    "    'Italy': 'IT',\n",
-    "    'Latvia': 'LV',\n",
-    "    'Montenegro': 'ME',\n",
-    "    'Netherlands': 'NL',\n",
-    "    'Norway': 'NO',\n",
-    "    'Portugal': 'PT',\n",
-    "    'Romania': 'RO',\n",
-    "    'Slovakia': 'SK',\n",
-    "    'Spain': 'ES',\n",
-    "    'Sweden': 'SE',\n",
-    "    'Switzerland': 'CH',\n",
-    "    'Turkey': 'TR',\n",
-    "    'United Kingdom': 'UK',\n",
-    "}\n",
+    "countries = {'Albania': 'AL',\n",
+    "             'Austria': 'AT',\n",
+    "             'Belgium': 'BE',\n",
+    "             'Bulgaria': 'BG',\n",
+    "             'Croatia': 'HR',\n",
+    "             'Czechia': 'CZ',\n",
+    "             'Denmark': 'DK',\n",
+    "             'Estonia': 'EE',\n",
+    "             'Finland': 'FI',\n",
+    "             'France': 'FR',\n",
+    "             'Germany': 'DE',\n",
+    "             'Greece': 'EL',\n",
+    "             'Hungary': 'HU',\n",
+    "             'Ireland': 'IE',\n",
+    "             'Italy': 'IT',\n",
+    "             'Latvia': 'LV',\n",
+    "             'Montenegro': 'ME',\n",
+    "             'Netherlands': 'NL',\n",
+    "             'Norway': 'NO',\n",
+    "             'Portugal': 'PT',\n",
+    "             'Romania': 'RO',\n",
+    "             'Slovakia': 'SK',\n",
+    "             'Spain': 'ES',\n",
+    "             'Sweden': 'SE',\n",
+    "             'Switzerland': 'CH',\n",
+    "             'Turkey': 'TR',\n",
+    "             'United Kingdom': 'UK',}\n",
     "\n",
     "for country in countries.keys():\n",
     "    fixed_deaths = pd.DataFrame(columns=['Date', 'location', 'location_name', 'Age group', 'Deaths'])\n",
@@ -169,47 +156,12 @@
     "        cases_age_group = country_data[country_data['Age'] == age_group].groupby('Date')['Cases'].sum().reset_index()\n",
     "\n",
     "        fixed_deaths_age_group = deaths_age_group['Deaths']\n",
-    "        \n",
-    "        if country == 'Netherlands':\n",
-    "        # find first non zero:\n",
-    "            first_nonzero_index = fixed_deaths_age_group[fixed_deaths_age_group>0].index[0]\n",
-    "            fixed_deaths_age_group[first_nonzero_index:][fixed_deaths_age_group<=0]=np.nan\n",
-    "            fixed_deaths_age_group=fixed_deaths_age_group.dropna()\n",
-    "            z = pd.Series(fixed_deaths_age_group.to_numpy()[1:] - fixed_deaths_age_group.to_numpy()[:-1], index=fixed_deaths_age_group.index[:-1])\n",
-    "            fixed_deaths_age_group[:-1][z<0]=np.nan\n",
-    "            fixed_deaths_age_group.index=deaths_age_group['Date'][fixed_deaths_age_group.index]\n",
-    "        \n",
-    "        else:\n",
-    "            fixed_deaths_age_group[fixed_deaths_age_group <= 0]=np.nan\n",
-    "            fixed_deaths_age_group = fixed_deaths_age_group.dropna()\n",
-    "            fixed_deaths_age_group = np.pad(fixed_deaths_age_group, (len(deaths_age_group) - len(fixed_deaths_age_group), 0), 'constant', constant_values=(0,0))\n",
-    "            z = fixed_deaths_age_group[1:] - fixed_deaths_age_group[:-1]\n",
-    "            fixed_deaths_age_group[:-1][z<0]=np.nan\n",
-    "            fixed_deaths_age_group = pd.Series(fixed_deaths_age_group)\n",
-    "            fixed_deaths_age_group.index = deaths_age_group['Date']\n",
-    "            \n",
+    "        fixed_deaths_age_group.index = deaths_age_group['Date']\n",
     "        fixed_deaths_age_group = fixed_deaths_age_group.resample('D').mean()\n",
     "        fixed_deaths_age_group = fixed_deaths_age_group.interpolate()\n",
     "        \n",
     "        fixed_cases_age_group = cases_age_group['Cases']\n",
-    "        if country == 'Netherlands':\n",
-    "            # find first non zero:\n",
-    "            first_nonzero_index = fixed_cases_age_group[fixed_cases_age_group>0].index[0]\n",
-    "            fixed_cases_age_group[first_nonzero_index:][fixed_cases_age_group<=0]=np.nan\n",
-    "            fixed_cases_age_group=fixed_cases_age_group.dropna()\n",
-    "            z = pd.Series(fixed_cases_age_group.to_numpy()[1:] - fixed_cases_age_group.to_numpy()[:-1], index=fixed_cases_age_group.index[:-1])\n",
-    "            fixed_cases_age_group[:-1][z<0]=np.nan\n",
-    "            fixed_cases_age_group.index=cases_age_group['Date'][fixed_cases_age_group.index]       \n",
-    "\n",
-    "        else:\n",
-    "            \n",
-    "            fixed_cases_age_group[fixed_cases_age_group <= 0]=np.nan\n",
-    "            fixed_cases_age_group = fixed_cases_age_group.dropna()\n",
-    "            fixed_cases_age_group = np.pad(fixed_cases_age_group, (len(cases_age_group) - len(fixed_cases_age_group), 0), 'constant', constant_values=(0,0))\n",
-    "            z = fixed_cases_age_group[1:] - fixed_cases_age_group[:-1]\n",
-    "            fixed_cases_age_group[:-1][z<0]=np.nan\n",
-    "            fixed_cases_age_group = pd.Series(fixed_cases_age_group)\n",
-    "            fixed_cases_age_group.index = cases_age_group['Date']\n",
+    "        fixed_cases_age_group.index = cases_age_group['Date']\n",
     "        fixed_cases_age_group = fixed_cases_age_group.resample('D').mean()\n",
     "        fixed_cases_age_group = fixed_cases_age_group.interpolate()\n",
     "\n",
@@ -233,28 +185,20 @@
     "        os.mkdir(f'{data_dir_path}/{country}')\n",
     "        \n",
     "    fixed_cases = fixed_cases.rename(columns={'Date': 'date', 'Cases': 'value'})\n",
-    "    fixed_cases = fixed_cases.fillna(0)\n",
     "    fixed_cases = fixed_cases.append(fixed_cases[fixed_cases['Age group'].isin(['85-89', '90-94', '95-99', '100-104'])].groupby(['date', 'location', 'location_name']).sum().reset_index()).fillna('85+')\n",
     "    fixed_cases = fixed_cases[~fixed_cases['Age group'].isin(['85-89', '90-94', '95-99', '100-104'])].sort_values('date').reset_index(drop=True)\n",
     "    fixed_cases.to_csv(f'{data_dir_path}/{country}/covid_cases.csv')\n",
     "    \n",
     "    fixed_deaths = fixed_deaths.rename(columns={'Date': 'date', 'Deaths': 'value'})\n",
-    "    fixed_deaths = fixed_deaths.fillna(0)\n",
     "    fixed_deaths = fixed_deaths.append(fixed_deaths[fixed_deaths['Age group'].isin(['85-89', '90-94', '95-99', '100-104'])].groupby(['date', 'location', 'location_name']).sum().reset_index()).fillna('85+')\n",
     "    fixed_deaths = fixed_deaths[~fixed_deaths['Age group'].isin(['85-89', '90-94', '95-99', '100-104'])].sort_values('date').reset_index(drop=True)\n",
     "    fixed_deaths.to_csv(f'{data_dir_path}/{country}/covid_deaths.csv')\n",
-    "    \n",
-    "    fig, axs = plt.subplots(1, 2, figsize=(30,10))\n",
-    "    fixed_deaths.plot(ax=axs[0], x='date', y='value', label='deaths')\n",
-    "    fixed_cases.plot(ax=axs[1], x='date', y='value', label='cases')\n",
-    "    plt.savefig(f'./data/Data/Data comparation/{country}.png')\n",
-    "    plt.close('all')\n",
     "print('Covid files prepared')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3227f3e4-f7e2-45b1-b357-9682b2165f24",
    "metadata": {},
    "outputs": [],
@@ -267,8 +211,6 @@
     "        continue\n",
     "    short, country = row[6].split(':')\n",
     "    if len(short) == 2 and country not in countries.keys():\n",
-    "        if short in ['FX', 'XK']:\n",
-    "            continue\n",
     "        if short == 'DE':\n",
     "            countries['Germany'] = short\n",
     "        else:\n",
@@ -279,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "77ffa5b6-d3ee-47f9-a8bf-1e08330e13dc",
    "metadata": {},
    "outputs": [
@@ -307,13 +249,13 @@
     "        if index in [0]:\n",
     "            continue\n",
     "        if row[7] >= str(2015) and row[6][:2] in writer_dict.keys():\n",
-    "            writer_dict[row[6][:2]].writerow([row[7], row[6].split(':')[0], row[4].split(':')[0], row[5].split(':')[0], row[8]])\n",
+    "            writer_dict[row[6][:2]].writerow([row[7], row[6].split(':')[0], row[5].split(':')[0], row[4].split(':')[0], row[8]])\n",
     "print('Population files prepared')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b9f1b05f-3f12-4128-abde-7356df547f54",
    "metadata": {},
    "outputs": [
@@ -346,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9884ef0a-6fa9-490e-b827-0b72c7ccdce2",
+   "id": "583d6d15-e09f-4e93-909b-0dcf210ec79a",
    "metadata": {},
    "outputs": [],
    "source": []
