Add comparison of datasets

--- a/calculate_ifr.ipynb
+++ b/calculate_ifr.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "d752982b-08f6-46b2-b189-4874fbfffd72",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
     "    countries = json.load(file)\n",
     "    \n",
     "for country, region in countries.items():\n",
-    "    if country in ['Andorra', 'Bosnia and Herzegovina', 'Belarus', 'Monaco', 'Moldova', 'Russia', 'San Marino', 'United Kingdom']:\n",
+    "    if country in ['Andorra', 'Bosnia and Herzegovina', 'Belarus', 'Monaco', 'Moldova', 'Russia', 'San Marino']:\n",
     "        continue\n",
     "    est_IFR[country] = {}\n",
     "    \n",
@@ -196,7 +196,10 @@
     "    population = population[population['Region'] == region]\n",
     "    population['Age group'] = population['Age group'].replace({'TOTAL': 'YTOTAL', 'Y_LT1': 'Y0'}).apply(lambda x: x[1:])\n",
     "    population = population[~population['Age group'].isin(['TOTAL'])]\n",
-    "    population = population[population['Year'] == 2020]\n",
+    "    if country == 'United Kingdom':\n",
+    "        population = population[population['Year'] == 2019]\n",
+    "    else:\n",
+    "        population = population[population['Year'] == 2020]\n",
     "    population = population[population['Sex'] == 'T']\n",
     "    population['Age group'] = population['Age group'].apply(lambda x: int(x))\n",
     "    population = population.drop(columns=['Region', 'Year', 'Sex']).set_index('Age group').sort_index()\n",
@@ -209,56 +212,30 @@
     "            for i in range(start, stop):\n",
     "                P += T[i] / np.sum(T[start: stop]) * (np.exp(alpha[0]*i + alpha[1]) + np.abs(alpha[2]))\n",
     "            est_IFR[country][f'{start:02d}-{(stop - 1):02d}'] = float(P) * 100.0\n",
+    "        P = 0.0\n",
+    "        for i in range(50, 65):\n",
+    "            P += T[i] / np.sum(T[50: 65]) * (np.exp(alpha[0]*i + alpha[1]) + np.abs(alpha[2]))\n",
+    "        est_IFR[country][f'50-64'] = float(P) * 100.0\n",
     "    else:\n",
     "        for start, stop in zip([0, 25, 35, 45, 55, 65, 75], [25, 35, 45, 55, 65, 75, 85]):\n",
     "            P = 0.0\n",
     "            for i in range(start, stop):\n",
     "                P += T[i] / np.sum(T[start: stop]) * (np.exp(alpha[0]*i + alpha[1]) + np.abs(alpha[2]))\n",
     "            est_IFR[country][f'{start:02d}-{(stop - 1):02d}'] = float(P) * 100.0\n",
+    "        P = 0.0\n",
+    "        for i in range(45, 65):\n",
+    "            P += T[i] / np.sum(T[50: 65]) * (np.exp(alpha[0]*i + alpha[1]) + np.abs(alpha[2]))\n",
+    "        est_IFR[country][f'45-64'] = float(P) * 100.0\n",
     "    P = 0.0\n",
     "    for i in range(0, 85):\n",
     "        P += T[i] / np.sum(T) * (np.exp(alpha[0]*i + alpha[1]) + np.abs(alpha[2]))\n",
     "    est_IFR[country][f'TOTAL'] = float(P) * 100.0\n",
+    "    \n",
+    "\n",
     "pd.DataFrame(est_IFR).to_excel(f'{data_dir_path}/ifr_all_country.xlsx')\n",
     "with open(f'{data_dir_path}/ifr_5_years_age_group.json', 'w') as file:\n",
     "    json.dump(est_IFR, file, indent=4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f9c6d1de-be23-41b6-bedc-6d0769b110d5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'00-24': 0.014876492535586726,\n",
-       " '25-34': 0.02465371084030961,\n",
-       " '35-44': 0.05454470405466354,\n",
-       " '45-54': 0.1681383005272718,\n",
-       " '55-64': 0.6338492388885836,\n",
-       " '65-74': 2.1400901407533466,\n",
-       " '75-84': 8.453745155561787,\n",
-       " 'TOTAL': 0.7850268705170588}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "est_IFR['Poland']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d92b14c-5a54-452c-82fe-b058a7fd0f3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
