--- a/new_simulation_poland.ipynb
+++ b/new_simulation_poland.ipynb
@@ -285,7 +285,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Time:  0:00:35 Elapsed Time: 0:00:35  (100%)   Country: Poland Running: Ploting result: Death factor                                                   \n"
+      "Time:  0:00:36 Elapsed Time: 0:00:36  (100%)   Country: Poland Running: Ploting result: Death factor                                                   \n"
      ]
     },
     {
@@ -686,12 +686,14 @@
     "            df = weekly_regional_cases.rolling(window=window, axis=1, min_periods=1, center=True).mean().cumsum(axis=1)\n",
     "\n",
     "            for age_group, ifr in IFRs[country].items():\n",
-    "                if age_group in ['00-04', '05-09', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44', '45-49', '50-54', '55-59']:\n",
-    "                    df_60_64 = cases_based_on_ifr.loc['60-64', :].apply(lambda x: 100*x/IFRs[country]['60-64'])\n",
-    "                    df.loc[age_group, :] = df_60_64 / df.loc['60-64', :]\n",
+    "                if age_group in ['45-64', '50-64']:\n",
+    "                    continue\n",
+    "                if age_group in ['00-04', '05-09', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44', '45-49']:\n",
+    "                    df_60_64 = corrected_covid_deaths_window.copy().cumsum(axis=1).loc[['50-54', '55-59', '60-64'], :].sum().apply(lambda x: 100*x/IFRs[country]['50-64'])\n",
+    "                    df.loc[age_group, :] = df_60_64 / df.loc[['50-54', '55-59', '60-64'], :].sum()\n",
     "                    df.loc[age_group, :] = df.loc[age_group, :].fillna(0)\n",
     "                    df.loc[age_group, :] = df.loc[age_group, :].apply(lambda x: np.maximum(1.0, x))\n",
-    "                    cases_based_on_ifr.loc[age_group, :] = weekly_regional_cases.rolling(window=window, axis=1, min_periods=1, center=True).mean().cumsum(axis=1).loc[age_group, :] * df.loc[age_group, :]\n",
+    "                    cases_based_on_ifr.loc[age_group, :] = (weekly_regional_cases.rolling(window=window, axis=1, min_periods=1, center=True).mean().loc[age_group, :] * df.loc[age_group, :]).cumsum()\n",
     "                else:                                                                                                            \n",
     "                    cases_based_on_ifr.loc[age_group, :] = cases_based_on_ifr.loc[age_group, :].apply(lambda x: 100*x/ifr)\n",
     "                    df.loc[age_group, :] = cases_based_on_ifr.loc[age_group, :] / df.loc[age_group, :]\n",
@@ -781,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4926d01c-65e0-493f-88cc-784e86365695",
+   "id": "e94ed420-ab86-4d46-9e95-b450eb7f81d5",
    "metadata": {},
    "outputs": [],
    "source": []
