--- a/prepare_UK_data.ipynb
+++ b/prepare_UK_data.ipynb
@@ -312,10 +312,10 @@
     "data = pd.DataFrame()\n",
     "for date in pd.date_range(start='3/2/2020', end='01/3/2022'):\n",
     "    try:\n",
-    "        new_date = pd.read_csv(female_deaths_link + date.strftime(\"%Y-%m-%d\"))\n",
-    "        data = data.append(new_date)\n",
-    "        new_date = pd.read_csv(male_deaths_link + date.strftime(\"%Y-%m-%d\"))\n",
-    "        data = data.append(new_date)\n",
+    "        new_data = pd.read_csv(female_deaths_link + date.strftime(\"%Y-%m-%d\"))\n",
+    "        data = data.append(new_data)\n",
+    "        new_data = pd.read_csv(male_deaths_link + date.strftime(\"%Y-%m-%d\"))\n",
+    "        data = data.append(new_data)\n",
     "    except BaseException as err:\n",
     "        pass\n",
     "deaths = data.groupby(['date', 'age']).sum().reset_index().sort_values('date')\n",
