--- a/new_simulation.ipynb
+++ b/new_simulation.ipynb
@@ -115,16 +115,28 @@
    "outputs": [],
    "source": [
     "def calculate_overall_covid_deaths(total_deaths, region):\n",
-    "    overall_deaths = total_deaths[np.logical_and(total_deaths['Region'] == region, total_deaths['Year'] >= str(2020))].drop(columns=['Region']).reset_index(drop=True)\n",
-    "    y2020 = overall_deaths[overall_deaths['Year'] == '2020'].reset_index(drop=True)[overall_deaths.columns[1:]]\n",
-    "    y2020.columns = ['Age group'] + [f'2020W{i:02d}' for i in range(1, 53 + 1)]\n",
-    "    y2021 = overall_deaths[overall_deaths['Year'] == '2021'].reset_index(drop=True)[overall_deaths.columns[1:-1]]\n",
-    "    y2021.columns = ['Age group'] + [f'2021W{i:02d}' for i in range(1, 52 + 1)]\n",
-    "    y2022 = overall_deaths[overall_deaths['Year'] == '2021'].reset_index(drop=True)[overall_deaths.columns[1:-1]]\n",
-    "    y2022.columns = ['Age group'] + [f'2022W{i:02d}' for i in range(1, 52 + 1)]\n",
-    "    overall_deaths = pd.concat([y2020[y2020.columns[1:]], y2021[y2021.columns[1:]], y2022[y2022.columns[1:]]], axis=1)\n",
-    "    overall_deaths.index = y2020['Age group']\n",
-    "    overall_deaths = overall_deaths.sort_index()\n",
+    "    if country == 'Sweden':\n",
+    "        overall_deaths = total_deaths[np.logical_and(total_deaths['Region'] == region, total_deaths['Year'] >= str(2020))].drop(columns=['Region']).reset_index(drop=True)\n",
+    "        y2020 = overall_deaths[overall_deaths['Year'] == '2020'].reset_index(drop=True)[overall_deaths.columns[1:-1]]\n",
+    "        y2020.columns = ['Age group'] + [f'2020W{i:02d}' for i in range(1, 53 + 1)]\n",
+    "        y2021 = overall_deaths[overall_deaths['Year'] == '2021'].reset_index(drop=True)[overall_deaths.columns[1:-2]]\n",
+    "        y2021.columns = ['Age group'] + [f'2021W{i:02d}' for i in range(1, 52 + 1)]\n",
+    "        y2022 = overall_deaths[overall_deaths['Year'] == '2022'].reset_index(drop=True)[overall_deaths.columns[1:-2]]\n",
+    "        y2022.columns = ['Age group'] + [f'2022W{i:02d}' for i in range(1, 52 + 1)]\n",
+    "        overall_deaths = pd.concat([y2020[y2020.columns[1:]], y2021[y2021.columns[1:]], y2022[y2022.columns[1:]]], axis=1)\n",
+    "        overall_deaths.index = y2020['Age group']\n",
+    "        overall_deaths = overall_deaths.sort_index()\n",
+    "    else:\n",
+    "        overall_deaths = total_deaths[np.logical_and(total_deaths['Region'] == region, total_deaths['Year'] >= str(2020))].drop(columns=['Region']).reset_index(drop=True)\n",
+    "        y2020 = overall_deaths[overall_deaths['Year'] == '2020'].reset_index(drop=True)[overall_deaths.columns[1:]]\n",
+    "        y2020.columns = ['Age group'] + [f'2020W{i:02d}' for i in range(1, 53 + 1)]\n",
+    "        y2021 = overall_deaths[overall_deaths['Year'] == '2021'].reset_index(drop=True)[overall_deaths.columns[1:-1]]\n",
+    "        y2021.columns = ['Age group'] + [f'2021W{i:02d}' for i in range(1, 52 + 1)]\n",
+    "        y2022 = overall_deaths[overall_deaths['Year'] == '2022'].reset_index(drop=True)[overall_deaths.columns[1:-1]]\n",
+    "        y2022.columns = ['Age group'] + [f'2022W{i:02d}' for i in range(1, 52 + 1)]\n",
+    "        overall_deaths = pd.concat([y2020[y2020.columns[1:]], y2021[y2021.columns[1:]], y2022[y2022.columns[1:]]], axis=1)\n",
+    "        overall_deaths.index = y2020['Age group']\n",
+    "        overall_deaths = overall_deaths.sort_index()\n",
     "    return overall_deaths"
    ]
   },
@@ -285,7 +297,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Time:  0:19:35 Elapsed Time: 0:19:35  (100%)   Country: Slovakia Running: Ploting result: Death factor                                                      \n"
+      "Time:  0:30:31 Elapsed Time: 0:30:31  (100%)   Country: United Kingdom Running: Ploting result: Death factor                                                   \n"
      ]
     },
     {
@@ -323,32 +335,12 @@
     "\n",
     "df_ratio = {}\n",
     "for country_index, (country, regions) in enumerate(countries.items()):\n",
-    "    if country not in [\n",
-    "         # 'Albania',\n",
-    "         'Austria',\n",
-    "         'Belgium',\n",
-    "         'Bulgaria',\n",
-    "         'Switzerland',\n",
-    "         # 'Czechia',\n",
-    "         'Germany',\n",
-    "         'Denmark',\n",
-    "         'Greece',\n",
-    "         'Spain',\n",
-    "         'Finland',\n",
-    "         'France',\n",
-    "         # 'Croatia',\n",
-    "         'Hungary',\n",
-    "         # 'Ireland',\n",
-    "         'Italy',\n",
-    "         'Latvia',\n",
-    "         # 'Netherlands',\n",
-    "         'Norway',\n",
-    "         'Portugal',\n",
-    "         # 'Romania',\n",
-    "         # 'Sweden', jakiś problem\n",
-    "         'Slovakia',\n",
-    "         # 'Turkey',\n",
-    "         # 'United Kingdom',\n",
+    "    if country in [\n",
+    "        'Albania',\n",
+    "        'Ireland',\n",
+    "        'Iceland',\n",
+    "        'Lithuania',\n",
+    "        'Poland',\n",
     "    ]:\n",
     "        continue\n",
     "    format_label.update_mapping(country=country)\n",
@@ -627,12 +619,14 @@
     "            df = weekly_regional_cases.rolling(window=window, axis=1, min_periods=1, center=True).mean().cumsum(axis=1)\n",
     "\n",
     "            for age_group, ifr in IFRs[country].items():\n",
-    "                if age_group in ['00-04', '05-09', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44', '45-49', '50-54', '55-59']:\n",
-    "                    df_60_64 = cases_based_on_ifr.loc['60-64', :].apply(lambda x: 100*x/IFRs[country]['60-64'])\n",
-    "                    df.loc[age_group, :] = df_60_64 / df.loc['60-64', :]\n",
+    "                if age_group in ['45-64', '50-64']:\n",
+    "                    continue\n",
+    "                if age_group in ['00-04', '05-09', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40-44', '45-49']:\n",
+    "                    df_60_64 = corrected_covid_deaths_window.copy().cumsum(axis=1).loc[['50-54', '55-59', '60-64'], :].sum().apply(lambda x: 100*x/IFRs[country]['50-64'])\n",
+    "                    df.loc[age_group, :] = df_60_64 / df.loc[['50-54', '55-59', '60-64'], :].sum()\n",
     "                    df.loc[age_group, :] = df.loc[age_group, :].fillna(0)\n",
     "                    df.loc[age_group, :] = df.loc[age_group, :].apply(lambda x: np.maximum(1.0, x))\n",
-    "                    cases_based_on_ifr.loc[age_group, :] = weekly_regional_cases.rolling(window=window, axis=1, min_periods=1, center=True).mean().cumsum(axis=1).loc[age_group, :] * df.loc[age_group, :]\n",
+    "                    cases_based_on_ifr.loc[age_group, :] = (weekly_regional_cases.rolling(window=window, axis=1, min_periods=1, center=True).mean().loc[age_group, :] * df.loc[age_group, :]).cumsum()\n",
     "                else:                                                                                                            \n",
     "                    cases_based_on_ifr.loc[age_group, :] = cases_based_on_ifr.loc[age_group, :].apply(lambda x: 100*x/ifr)\n",
     "                    df.loc[age_group, :] = cases_based_on_ifr.loc[age_group, :] / df.loc[age_group, :]\n",
@@ -722,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f6f3c67-3230-4079-8786-13cf3ba18cf0",
+   "id": "aa4627bf-d11c-46f2-8d1a-ba0f88e77183",
    "metadata": {},
    "outputs": [],
    "source": []
