--- a/prepare_poland_data.ipynb
+++ b/prepare_poland_data.ipynb
@@ -134,6 +134,7 @@
     "\n",
     "country = 'Poland'\n",
     "today = datetime.date.today().strftime(\"%d-%m-%Y\")\n",
+    "today = '06-03-2022'\n",
     "data_dir_path = f'data/World/{today}'\n",
     "if not os.path.exists(f'{data_dir_path}'):\n",
     "    os.mkdir(f'{data_dir_path}')\n",
@@ -282,6 +283,7 @@
     "fixed_deaths\n",
     "country = 'Poland'\n",
     "today = datetime.date.today().strftime(\"%d-%m-%Y\")\n",
+    "today = '06-03-2022'\n",
     "data_dir_path = f'data/World/{today}'\n",
     "if not os.path.exists(f'{data_dir_path}'):\n",
     "    os.mkdir(f'{data_dir_path}')\n",
