--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d85f8919-1a55-4a21-ab1f-a6cb9f1baeec",
+   "id": "fdffab4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ee7657a7-ce94-4103-9575-89fad20ecda6",
+   "id": "69cebfc8",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bab9cd9d-bb66-49d9-be73-b7053fa57635",
+   "id": "65c0cbeb",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05c779ce-afef-4a0e-ba03-e50060508ab5",
+   "id": "19d819cf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e706b86c-8644-4a0e-978d-f6a23c0476a7",
+   "id": "95133f11",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "72ddd4f2-74f0-40b4-8994-3b010a67b9bb",
+   "id": "3f73f3f0",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b3732a9e-da5f-493f-8684-d693dfe95879",
+   "id": "5ed44c51",
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0699422-e441-47e9-8a9d-d3b5b453c604",
+   "id": "3f47696c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1502,7 +1502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1516,7 +1516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
