--- a/download_all_data.ipynb
+++ b/download_all_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5dc867eb-f244-4a39-80bf-cdd2c5f6fa23",
+   "id": "f17a740c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cc148d6b-8954-416c-9e95-f65eba514efb",
+   "id": "505b0cb0",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c839fcb5-8907-43d2-b142-2df27a648cc7",
+   "id": "7038f821",
    "metadata": {
     "tags": []
    },
@@ -86,7 +86,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -100,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   },
   "toc-showcode": true
  },
