--- a/new_simulation_poland.ipynb
+++ b/new_simulation_poland.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d1a994f1-1805-49be-b45d-7b754768e1b2",
+   "id": "2874ba03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e4b47af1-51db-48fc-917a-4bfb191fbe89",
+   "id": "c312db54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9b14eb40-5fb3-4d6f-aa7f-036a8bcc31c5",
+   "id": "d60894fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "742f0a0e-8aa7-4e67-8453-52d4dcd142af",
+   "id": "f42582c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3b5e4ea-b59b-498a-bc7b-a07fc740616e",
+   "id": "818871cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af1837c3-3ac2-4f83-a56b-09b69e6260f1",
+   "id": "4a2df964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8b8b678e-a5b4-4cb6-8892-3b96c3b4d272",
+   "id": "ae2144a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0ccf8417-4f97-4a46-868b-ea6d079eb71d",
+   "id": "00711a03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1764c334-0ccc-43da-8713-f1f1bc52153d",
+   "id": "8797229b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d38ea02f-d898-4a6f-8697-a9e7e0ebff05",
+   "id": "ee33daf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dfaa2e6c-d9f5-4e35-afa5-5dc0513e5912",
+   "id": "75a0ec04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b217badb-6dc0-4512-b64c-79a964fe73ab",
+   "id": "4776cefd",
    "metadata": {
     "tags": []
    },
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e94ed420-ab86-4d46-9e95-b450eb7f81d5",
+   "id": "259edd31",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -791,7 +791,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -805,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
