--- a/preapre_all_data-old.ipynb
+++ b/preapre_all_data-old.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "431c7535-a268-4290-b8f1-c7c5254554a7",
+   "id": "cd04c70a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "963243a1-b533-4fec-a28d-3ef95dcea2d9",
+   "id": "6eb25164",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "589e75a8-ccad-42f0-8f4f-4f0136107b37",
+   "id": "b1fb2318",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "28143e8d-7756-413b-9bc5-03e5b4c5d4b6",
+   "id": "6a20704f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d91a28c8-41f8-4396-8fa6-b916af0865a2",
+   "id": "ca597f80",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3227f3e4-f7e2-45b1-b357-9682b2165f24",
+   "id": "61fabfe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "77ffa5b6-d3ee-47f9-a8bf-1e08330e13dc",
+   "id": "f706a8c9",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9f1b05f-3f12-4128-abde-7356df547f54",
+   "id": "8d2a2884",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "583d6d15-e09f-4e93-909b-0dcf210ec79a",
+   "id": "de50aae9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -296,7 +296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
