--- a/JHU-sumulation.ipynb
+++ b/JHU-sumulation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d1a994f1-1805-49be-b45d-7b754768e1b2",
+   "id": "49635d2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e4b47af1-51db-48fc-917a-4bfb191fbe89",
+   "id": "a9f16747",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9b14eb40-5fb3-4d6f-aa7f-036a8bcc31c5",
+   "id": "e43cf9e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "742f0a0e-8aa7-4e67-8453-52d4dcd142af",
+   "id": "2e72da06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3b5e4ea-b59b-498a-bc7b-a07fc740616e",
+   "id": "7e30a1b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af1837c3-3ac2-4f83-a56b-09b69e6260f1",
+   "id": "130ce536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8b8b678e-a5b4-4cb6-8892-3b96c3b4d272",
+   "id": "0c1b53bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0ccf8417-4f97-4a46-868b-ea6d079eb71d",
+   "id": "6c2df9fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1764c334-0ccc-43da-8713-f1f1bc52153d",
+   "id": "bf895dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d38ea02f-d898-4a6f-8697-a9e7e0ebff05",
+   "id": "7ea65e04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,12 +271,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dfaa2e6c-d9f5-4e35-afa5-5dc0513e5912",
+   "id": "37f2903c",
    "metadata": {},
    "outputs": [],
    "source": [
     "today = datetime.date.today().strftime(\"%d-%m-%Y\")\n",
-    "today = '06-03-2022'\n",
     "data_dir_path = f'data/World/{today}'\n",
     "result_dir_path = f'result/World/{today}'\n",
     "if not os.path.exists(f'{result_dir_path}'):\n",
@@ -291,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b217badb-6dc0-4512-b64c-79a964fe73ab",
+   "id": "37796682",
    "metadata": {
     "tags": []
    },
@@ -300,7 +299,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Time:  0:11:27 Elapsed Time: 0:11:27  (100%)   Country: United Kingdom Running: Ploting result: Death factor                                                   \n"
+      "Time:  0:08:06 Elapsed Time: 0:08:06  (100%)   Country: United Kingdom Running: Ploting result: Death factor                                                   \n"
      ]
     },
     {
@@ -522,7 +521,7 @@
     "        \n",
     "        \n",
     "        # Plot results\n",
-    "        window_list = [1, 3, 5]\n",
+    "        window_list = [3]\n",
     "        gamma_list = [0.0, 0.8, 1.0]\n",
     "\n",
     "        for gamma, window in product(gamma_list, window_list):\n",
@@ -696,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a786e71e-5043-40f5-9ed5-38ec94c7b24b",
+   "id": "79780417",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -704,7 +703,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -718,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
