--- a/preapre_all_data.ipynb
+++ b/preapre_all_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "431c7535-a268-4290-b8f1-c7c5254554a7",
+   "id": "81f06995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "28143e8d-7756-413b-9bc5-03e5b4c5d4b6",
+   "id": "c82d0f33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3227f3e4-f7e2-45b1-b357-9682b2165f24",
+   "id": "f3ca3f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "77ffa5b6-d3ee-47f9-a8bf-1e08330e13dc",
+   "id": "6053bb2d",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9f1b05f-3f12-4128-abde-7356df547f54",
+   "id": "0bca09fe",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d91a28c8-41f8-4396-8fa6-b916af0865a2",
+   "id": "20331b9b",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "525d81d3-ef1a-431e-b6c7-d9af621f08fa",
+   "id": "b5e1e216",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -306,7 +306,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
