--- a/sadasdasd.ipynb
+++ b/sadasdasd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "450ab6b9-55eb-4d5f-8f18-66d42ddb472b",
+   "id": "19ab9511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2066c39-9b8c-4e61-b082-c89ad9c1f587",
+   "id": "8af2b84b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ee84dc3e-7357-4cd6-af18-0eab00082119",
+   "id": "843537f2",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e9d78ce-76b2-4cea-8621-75ad5f9cb29a",
+   "id": "7de3914c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -481,7 +481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -495,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
